--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.violin.readingnews.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/main_activity">
 
     <TextView
         android:layout_width="wrap_content"
