--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -10,7 +10,7 @@
     tools:context="com.violin.readingnews.news.main.MainActivity"
     tools:showIn="@layout/main_activity">
 
-    <android.support.v4.view.ViewPager
+    <com.violin.readingnews.news.main.MainViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
