--- a/app/src/main/res/layout/news_fragment.xml
+++ b/app/src/main/res/layout/news_fragment.xml
@@ -5,9 +5,10 @@
     tools:context="com.violin.readingnews.news.news.NewsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.violin.readingnews.news.news.NewsRecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+         />
 
 </FrameLayout>
