--- a/app/src/main/res/layout/news_item_view.xml
+++ b/app/src/main/res/layout/news_item_view.xml
@@ -1,38 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="15sp" />
-
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageview1"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_weight="1" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp" />
 
-        <ImageView
-            android:id="@+id/imageview2"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_weight="1" />
 
-        <ImageView
-            android:id="@+id/imageview3"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_weight="1" />
+        <TextView
+            android:id="@+id/short_des"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/short_des"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
 </merge>
