--- a/app/src/main/res/layout/pic_fragment.xml
+++ b/app/src/main/res/layout/pic_fragment.xml
@@ -8,6 +8,7 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#f5f5f5"
         />
 
 </FrameLayout>
