滑动字体颜色的初步添加

--- a/app/src/main/res/layout/news_item_view.xml
+++ b/app/src/main/res/layout/news_item_view.xml
@@ -3,25 +3,31 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginRight="10dp"
+        >
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textColor="#323232"
+            android:textSize="18sp" />
 
 
         <TextView
             android:id="@+id/short_des"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="#969696" />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="150dp"
+        android:scaleType="fitXY"
         android:layout_height="150dp" />
 </merge>
