--- a/app/src/main/res/layout/news_detail_activity.xml
+++ b/app/src/main/res/layout/news_detail_activity.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/news_detail_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.violin.readingnews.news.news.newdetail.NewsDetailActivity">
-<com.violin.readingnews.kit.webview.X5WebView
-    android:id="@+id/webview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"></com.violin.readingnews.kit.webview.X5WebView>
-</RelativeLayout>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        app:navigationIcon="@drawable/arrow_back"
+        app:titleTextColor="#fff"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    <com.violin.readingnews.kit.webview.X5WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.violin.readingnews.kit.webview.X5WebView>
+</LinearLayout>
